Changed textfield label color

--- a/src/app/button/button.component.css
+++ b/src/app/button/button.component.css
@@ -32,7 +32,7 @@ button.secondary {
 }
 
 button.secondary:hover {
-    background-color: #C9C7C7;
+    background-color: #FFFAFA;
 }
 
 button.danger {
